--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
-<body>
-	<div id="app"></div>
-	<script src="bundle.js"></script>
-</body>
+	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135285449-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		
+		gtag('config', 'UA-135285449-1');
+		</script>
+	</head>
+
+	<body>
+		<div id="app"></div>
+		<script src="bundle.js"></script>
 </html>
