--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		gtag('config', 'UA-135285449-1');
 		</script>
 
-		<base href="/">
+		<base href="https://ramseyopp.com/">
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
