remove explicit references to the domain

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤙</text></svg>">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135285449-1"></script>
@@ -12,7 +13,7 @@
 		gtag('config', 'UA-135285449-1');
 		</script>
 
-		<base href="https://ramseyopp.com/">
+		<base href="/">
 
 		<!-- Start Single Page Apps for GitHub Pages -->
 		<script type="text/javascript">
