add simple analytics

--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
 	<body>
 		<div id="app"></div>
 		<script src="bundle.js"></script>
+
+		<script async defer src="https://sa.ramseyopp.com/latest.js"></script>
+		<noscript><img src="https://sa.ramseyopp.com/noscript.gif" alt=""/></noscript>
 	</body>
 </html>
